[gd_scene load_steps=5 format=3 uid="uid://cabix5vgaakof"]

[ext_resource type="Script" path="res://scripts/level_switcher.gd" id="1_vnne3"]
[ext_resource type="Material" uid="uid://dboxaay5wtknv" path="res://assets/materials/ursc/testing_mat.tres" id="2_wei10"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1h2me"]
size = Vector3(2, 2, 2)

[sub_resource type="BoxMesh" id="BoxMesh_fwv4e"]
material = ExtResource("2_wei10")
size = Vector3(2, 2, 2)

[node name="LevelSwitch" type="Node3D"]
script = ExtResource("1_vnne3")

[node name="tpArea" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="tpArea"]
shape = SubResource("BoxShape3D_1h2me")

[node name="debug" type="MeshInstance3D" parent="tpArea"]
mesh = SubResource("BoxMesh_fwv4e")
skeleton = NodePath("../..")

[node name="debounceTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="tpArea" to="." method="_on_tp_area_body_entered"]
[connection signal="body_entered" from="tpArea" to="." method="_on_body_entered"]
